--- a/NatSuite.ML.Vision.MobileNetv2.csproj
+++ b/NatSuite.ML.Vision.MobileNetv2.csproj
@@ -9,10 +9,10 @@
     <ProductVersion>10.0.20506</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <RootNamespace></RootNamespace>
-    <ProjectGuid>{1939b41e-92d1-4406-2860-a6f4cf3e7c71}</ProjectGuid>
+    <ProjectGuid>{1ec987f5-96a8-8c24-ec5a-5c49fe07bfee}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <AssemblyName>NatSuite.Devices</AssemblyName>
+    <AssemblyName>NatSuite.ML.Vision.MobileNetv2</AssemblyName>
     <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <BaseDirectory>.</BaseDirectory>
@@ -36,19 +36,8 @@
     <ImplicitlyExpandDesignTimeFacades>false</ImplicitlyExpandDesignTimeFacades>
   </PropertyGroup>
   <ItemGroup>
-     <Compile Include="Assets\NatSuite\NatDevice\Runtime\AudioDevice.cs" />
-     <Compile Include="Assets\NatSuite\NatDevice\Runtime\CameraDevice.cs" />
-     <Compile Include="Assets\NatSuite\NatDevice\Runtime\IMediaDevice.cs" />
-     <Compile Include="Assets\NatSuite\NatDevice\Runtime\Internal\Bridge.cs" />
-     <Compile Include="Assets\NatSuite\NatDevice\Runtime\Internal\NatDeviceTypes.cs" />
-     <Compile Include="Assets\NatSuite\NatDevice\Runtime\Internal\NativeAudioDevice.cs" />
-     <Compile Include="Assets\NatSuite\NatDevice\Runtime\Internal\NativeCameraDevice.cs" />
-     <Compile Include="Assets\NatSuite\NatDevice\Runtime\Internal\WebCameraDevice.cs" />
-     <Compile Include="Assets\NatSuite\NatDevice\Runtime\MediaDeviceCriteria.cs" />
-     <Compile Include="Assets\NatSuite\NatDevice\Runtime\MediaDevicePermissions.cs" />
-     <Compile Include="Assets\NatSuite\NatDevice\Runtime\MediaDeviceQuery.cs" />
-     <Compile Include="Assets\NatSuite\NatDevice\Runtime\MediaDeviceTypes.cs" />
-     <None Include="Assets\NatSuite\NatDevice\Runtime\NatSuite.Devices.asmdef" />
+     <Compile Include="Assets\ML\mobilenet-v2\Runtime\MobileNetv2Predictor.cs" />
+     <None Include="Assets\ML\mobilenet-v2\Runtime\NatSuite.ML.Vision.MobileNetv2.asmdef" />
     <Reference Include="UnityEngine">
         <HintPath>/Applications/Unity/Hub/Editor/2019.4.28f1/Unity.app/Contents/Managed/UnityEngine/UnityEngine.dll</HintPath>
     </Reference>
@@ -597,6 +586,9 @@
     </Reference>
     <Reference Include="mscorlib">
         <HintPath>/Applications/Unity/Hub/Editor/2019.4.28f1/Unity.app/Contents/NetStandard/compat/2.0.0/shims/netfx/mscorlib.dll</HintPath>
+    </Reference>
+    <Reference Include="NatSuite.ML">
+        <HintPath>/Users/yusuf/Documents/Projects/Classifier-Cam/Library/ScriptAssemblies/NatSuite.ML.dll</HintPath>
     </Reference>
     <Reference Include="UnityEditor.UI">
         <HintPath>/Users/yusuf/Documents/Projects/Classifier-Cam/Library/ScriptAssemblies/UnityEditor.UI.dll</HintPath>
